# Deep-dive-python

./: README.md  decorator.py  iterator.py  main.py  pyproject.toml  variableScope.py
Unit-testing-in-python/: cal.py  test_cal.py
async-io-corey-schafer/: intro.py
pathlib-arjan-codes/: creatingFiles.py  first..py  operator_overloading.py  pydantic-usage-in-path.py
pydantic-arjan-codes/: intro.py
requests-module-corey-schafer/: part2.py  requests-module-corey-schafer.py  test.html
ruff-linter-corey-schafer/: test.py
